- Fixed bug #35143 (gettimeofday() ignores current time zone). - Fixed tests due to class constants patch.